# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: gendiff-check.yml
gendiff/: __init__.py  diffgenerator.py  file_parsing.py  makediff.py
gendiff/formats/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendifference/: diffgenerator.py
gendifference/scripts/: gendiff.py
tests/: test_generate_diff.py  test_json_nested.py  test_plain_nested.py  test_stylish_nested.py
tests/fixtures/: file1-file2-result.txt
